fix: Fix width of the chat component on mobile

--- a/src/app/page/group/chat/chat.component.scss
+++ b/src/app/page/group/chat/chat.component.scss
@@ -50,9 +50,8 @@
 
 .chats {
   width: 400px;
-  height: calc(100% - 136px);
+  height: 100%;
   overflow: auto;
-  position: fixed;
 
 }
 
@@ -126,7 +125,7 @@
 
   .chats {
     width: 100%;
-    height: calc(100% - 184px);
+    height: calc(100% - #{$CHAT_FOOTER_HEIGHT});
   }
 
 .footer {
